// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreatePostDto> should fail if text is empty 1`] = `
[
  {
    "constraints": {
      "isNotEmpty": "Username is required",
      "isString": "Username must be a string",
      "maxLength": "Username must be at most 255 characters long",
      "minLength": "Username must be at least 1 characters long",
    },
    "property": "text",
    "value": undefined,
  },
]
`;

exports[`<CreatePostDto> should fail if text is too long 1`] = `
[
  {
    "constraints": {
      "maxLength": "Username must be at most 255 characters long",
    },
    "property": "text",
    "value": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
  },
]
`;
